--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/server.js",
+    "start": "nodemon ./bin/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +14,8 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "http": "0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
