--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "guid": "0.0.12",
     "http": "0.0.1-security",
     "mongoose": "^5.12.13"
   },
